--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,30 +5,28 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "lldb",
+            "type": "cppdbg",
             "request": "launch",
             "name": "Launch Debug app",
             "program": "${workspaceFolder}/build/CryptoGuard",
             "args": [
-                "-i",
-                "input.txt",
+                "--input",
+                "../tests/test_file.txt",
                 "--command",
                 "checksum"
             ],
             "cwd": "${workspaceFolder}/build",
-            "preLaunchTask": "GCC: Build Debug",
-            "initCommands": ["settings set target.disable-aslr false"]
+            "preLaunchTask": "GCC: Build Debug"
         },
         {
-            "type": "lldb",
+            "type": "cppdbg",
             "request": "launch",
             "name": "Launch Debug unit_tests",
             "program": "${workspaceFolder}/build/unit_tests",
             "args": [
             ],
             "cwd": "${workspaceFolder}/build",
-            "preLaunchTask": "GCC: Build Debug",
-            "initCommands": ["settings set target.disable-aslr false"]
+            "preLaunchTask": "GCC: Build Debug"
         }
     ]
 }
