--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,9 @@ target_include_directories(${PROJECT_NAME}_imp PUBLIC
 )
 target_link_libraries(${PROJECT_NAME}_imp PRIVATE ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
 
-# Создаём исполняемый таргет и линкуем к нему статическую библиотеку
+# Создаём исполняемое целевое приложение и линкуем к нему статическую библиотеку
 add_executable(${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/src/main.cpp")
-target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_imp)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_imp stdc++exp)
 
 #
 # Тесты
